# eden

./: .gitignore  ChangeLog.md  README.md  default.nix  eden.cabal  eden.nix  result  shell.nix
eden-core/Eden/: Core.hs
eden-core/Eden/Core/: AST.hsig  Expr.hsig  Identifier.hsig  Printer.hsig  Statement.hsig
eden-core/Eden/Core/Expr/: Printer.hs  Printer.hsig
eden-core/Eden/Core/Program/: Printer.hsig
eden-core/Eden/Core/Statement/: Printer.hsig
eden-javascript/Eden/Core/: Expr.hs  Identifier.hs  Internal.hs  Statement.hs
eden-javascript/Eden/Core/Expr/: Printer.hs
eden-javascript/Eden/Core/Statement/: Printer.hs
eden-javascript/Eden/LambdaCalculus/: Abstraction.hs  Application.hs  Variable.hs
eden-javascript/Eden/LambdaCalculus/Prisms/: Impl.hs
eden-lambda-calculus-indef/Eden/LambdaCalculus/: Prisms.hsig
eden-lambda-calculus/Eden/: LambdaCalculus.hs
eden-lambda-calculus/Eden/LambdaCalculus/: Abstraction.hsig  Application.hsig  Expr.hs  Prelude.hs  Variable.hsig
eden-lambda-calculus/Eden/LambdaCalculus/Expr/: Printer.hs  Prisms.hs
eden-python/Eden/Core/: Expr.hs  Identifier.hs
eden-python/Eden/Core/Expr/: Printer.hs
eden-python/Eden/LambdaCalculus/: Abstraction.hs  Application.hs  Variable.hs
eden-python/Eden/LambdaCalculus/Prisms/: Impl.hs
src/: Main.hs  MyProgram.hs
