name:                eden
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

library eden-core-identifier
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Identifier
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-core-program
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Program
                     , Eden.Core.Program.Printer
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-core-expr
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Expr
                     , Eden.Core.Expr.Printer
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-core-statement
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Statement
                     , Eden.Core.Statement.Printer
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-lambda-calculus
  hs-source-dirs:      eden-lambda-calculus
  signatures:          Eden.LambdaCalculus.Variable
                     , Eden.LambdaCalculus.Abstraction
                     , Eden.LambdaCalculus.Application
  exposed-modules:     Eden.LambdaCalculus
                     , Eden.LambdaCalculus.Prelude
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , eden-core-expr
                     , eden-core-identifier

library eden-python
  hs-source-dirs:      eden-python
  exposed-modules:     Eden.Core.Expr
                     , Eden.Core.Expr.Printer
                     , Eden.Core.Identifier
                     , Eden.LambdaCalculus.Variable
                     , Eden.LambdaCalculus.Abstraction
                     , Eden.LambdaCalculus.Application
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-javascript
  hs-source-dirs:      eden-javascript
  exposed-modules:     Eden.Core.Identifier
                     , Eden.Core.Statement
                     , Eden.Core.Statement.Printer
                     , Eden.Core.Expr
                     , Eden.Core.Expr.Printer
                     , Eden.Core.Internal
                     , Eden.LambdaCalculus.Variable
                     , Eden.LambdaCalculus.Abstraction
                     , Eden.LambdaCalculus.Application
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library my-program
  hs-source-dirs:      src
  exposed-modules:     MyProgram
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , eden-lambda-calculus

library my-program-python
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.11
                     , my-program
                     , lens
                     , eden-lambda-calculus
                     , eden-python
  exposed-modules:     MyProgram

library my-program-javascript
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.11
                     , my-program
                     , lens
                     , eden-lambda-calculus
                     , eden-javascript
  exposed-modules:     MyProgram

executable eden-demo
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , my-program-python
                     , my-program-javascript
  mixins:              my-program-python (MyProgram as Python.MyProgram)
                     , my-program-javascript (MyProgram as JavaScript.MyProgram)
  hs-source-dirs:      src
  default-language:    Haskell2010
