name:                eden
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=2.0

library eden-core-identifier
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Identifier
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-core-program
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Program
                     , Eden.Core.Program.Printer
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-core-expr
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Expr
                     , Eden.Core.Expr.Printer
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-core-statement
  hs-source-dirs:      eden-core
  signatures:          Eden.Core.Statement
                     , Eden.Core.Statement.Printer
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11, lens

library eden-lambda-calculus
  hs-source-dirs:      eden-lambda-calculus
  exposed-modules:     Eden.LambdaCalculus.Expr
                     , Eden.LambdaCalculus.Expr.Printer
                     , Eden.LambdaCalculus.Prelude
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens

library eden-lambda-calculus-indef
  hs-source-dirs:      eden-lambda-calculus-indef
  signatures:          Eden.LambdaCalculus.Prisms
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , eden-core-expr
                     , eden-core-identifier
                     , eden-lambda-calculus

library eden-python
  hs-source-dirs:      eden-python
  exposed-modules:     Eden.Core.Expr
                     , Eden.Core.Expr.Printer
                     , Eden.Core.Identifier
                     , Eden.LambdaCalculus.Prisms.Impl
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , eden-lambda-calculus

library eden-javascript
  hs-source-dirs:      eden-javascript
  exposed-modules:     Eden.Core.Identifier
                     , Eden.Core.Statement
                     , Eden.Core.Statement.Printer
                     , Eden.Core.Expr
                     , Eden.Core.Expr.Printer
                     , Eden.Core.Internal
                     , Eden.LambdaCalculus.Prisms.Impl
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , eden-lambda-calculus

library my-program
  hs-source-dirs:      src
  exposed-modules:     MyProgram
  default-language:    Haskell2010
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , eden-lambda-calculus
                     , eden-lambda-calculus-indef

library my-program-python
  hs-source-dirs:      src
  reexported-modules:  MyProgram
  build-depends:       base >=4.9 && <4.11
                     , my-program
                     , lens
                     , eden-python
  mixins:              eden-python
                         (Eden.LambdaCalculus.Prisms.Impl as Eden.LambdaCalculus.Prisms)
                     , eden-python

library my-program-javascript
  hs-source-dirs:      src
  reexported-modules:  MyProgram
  build-depends:       base >=4.9 && <4.11
                     , my-program
                     , lens
                     , eden-javascript
  mixins:              eden-javascript
                         (Eden.LambdaCalculus.Prisms.Impl as Eden.LambdaCalculus.Prisms)
                     , eden-javascript

executable eden-demo
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.11
                     , lens
                     , my-program-python
                     , my-program-javascript
                     , eden-python
                     , eden-javascript
  mixins:              my-program-python (MyProgram as Python.MyProgram)
                     , my-program-javascript (MyProgram as JavaScript.MyProgram)
                     , eden-python (Eden.Core.Expr as Python.Expr)
                     , eden-python (Eden.LambdaCalculus.Prisms.Impl as Python.Optics)
                     , eden-python (Eden.Core.Expr.Printer as Python.Expr.Printer)
                     , eden-javascript (Eden.Core.Expr as JavaScript.Expr)
                     , eden-javascript (Eden.Core.Statement as JavaScript.Statement)
                     , eden-javascript (Eden.LambdaCalculus.Prisms.Impl as JavaScript.Optics)
                     , eden-javascript (Eden.Core.Expr.Printer as JavaScript.Expr.Printer)
  hs-source-dirs:      src
  default-language:    Haskell2010
